--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,19 +10,22 @@ body {
     color: #fefae0;
     background-color: #14213d;
     position: relative;
+    /* margin: 0;
+    padding: 0;
+    height: 100%;
+    padding-bottom: 100px; */
+    /* padding-right: 70px; */
 }
 
-
-/* * {
-    font-family: "Quicksand";
-    justify-content: center;
-    color: #fefae0;
-    background-color: #14213d;
-} */
 
 .content {
     /* max-width: 70%; */
     display: flex;
     padding: 50px;
+    /* padding-right: 110px; */
+    /* min-width: 50px; */
+    /* max-height: 800px; */
+    /* max-width: 100px; */
+
     margin: 0 auto;
 }
