--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -47,13 +47,12 @@
     right: 0;
 }
 
-/* @media screen and (max-width: 1000px) {
+@media screen and (max-width: 600px) {
 
-    .footer-mini-character {
-        background-color: black;
-        padding: 10px;
-        position: fixed;
-        bottom: 0;
-        right: 0;
+    .footer-mini-character img {
+        /* opacity: 0.5; */
+        /* size: 100px; */
+        height: 80px;
+        width: 80px;
     }
-} */
+}
